# stravanalytics_back-end

./: .env  .gitignore  .gitmodules  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  command template.json  command.json  compile_commands.json  main.cpp  strava_response.json  var.csv  var_local.csv
include/: Analyzer.hpp  Connector.hpp  JsonParser.hpp  Logger.hpp  Printer.hpp  StravaAuthController.hpp  StravaOAuth.hpp  csvParser.hpp
lib/: strava_response.json
output/: debug_python  output.json
src/: Analyzer.cpp  Connector.cpp  JsonParser.cpp  Logger.cpp  StravaAuthController.cpp  StravaOAuth.cpp  csvParser.cpp
src/graphics/: graphique_pace.py  graphique_splited.py
stravanalytics/: package-lock.json  package.json
stravanalytics/src/components/: Dashboard.vue  HelloWorld.vue
